FIXED Country, Leagues and Teams sync TODO Table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:8100/footballdb
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=admin
 spring.datasource.password=secretpass
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
