REFACTORED FIXED Countries, Leagues, Teams, CompetitionTables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,37 @@ spring.datasource.url=jdbc:postgresql://localhost:8100/footballdb
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=admin
 spring.datasource.password=secretpass
+spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+api.key=2
+api.version=v1
+api.format=json
+api.url_protocol=https
+api.base_url=www.thesportsdb.com/api
+api.path.leagues=all_leagues.php
+api.path.leagues.jsonParentKey=leagues
+api.path.countries=all_countries.php
+api.path.countries.jsonParentKey=countries
+api.path.leagues_in_country=search_all_leagues.php
+api.path.seasons_in_league=search_all_seasons.php
+api.path.teams_in_league=search_all_teams.php
+api.path.teams_in_league.jsonParentKey=teams
+api.path.teams_details_in_league_by_id=lookup_all_teams.php
+api.path.teams_details_in_league_by_id.jsonParentKey=table
+api.path.table.byLeagueIdAndSeason=lookuptable.php
+api.path.table.byLeagueIdAndSeason.jsonParentKey=table
+api.path.players_by_team_id=lookup_all_players.php
+api.parameters.league.strLeague=l
+api.parameters.league.idLeague=l
+api.parameters.country=c
+api.parameters.sport=s
+api.parameters.season=s
+whitelist.sport={ 'Soccer' }
+whitelist.seasons={ '2021-2022', '2022-2023', '2023-2024' }
+blacklist.leagues={ '_No League' }
+
+
+
+
+
