MOVED entities and repositories ADDED basic api to return all data from current tables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ api.parameters.country=c
 api.parameters.sport=s
 api.parameters.season=s
 whitelist.sport={ 'Soccer' }
-whitelist.seasons={ '2021-2022', '2022-2023', '2023-2024' }
+whitelist.seasons={ '2021-2022' }
 blacklist.leagues={ '_No League' }
 
 
