--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.password=secretpass
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+springdoc.packagesToScan=com.football.football_stats
+springdoc.pathsToMatch=/update/**, /api/**
 api.key=2
 api.version=v1
 api.format=json
