WIP player-info WIP extend update leagues with new info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 springdoc.packagesToScan=com.football.football_stats
 springdoc.pathsToMatch=/update/**, /api/**
-api.key=2
+api.key=50130162
 api.version=v1
 api.format=json
 api.url_protocol=https
@@ -17,6 +17,10 @@ api.path.leagues.jsonParentKey=leagues
 api.path.countries=all_countries.php
 api.path.countries.jsonParentKey=countries
 api.path.leagues_in_country=search_all_leagues.php
+api.path.leagues_in_country.jsonParentKey=countrys
+api.path.league_details_by_id=lookupleague.php
+api.path.league_details_by_id.jsonParentKey=leagues
+api.parameters.league_details_by_id=id
 api.path.seasons_in_league=search_all_seasons.php
 api.path.teams_in_league=search_all_teams.php
 api.path.teams_in_league.jsonParentKey=teams
