ADDED players backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,12 +20,13 @@ api.path.leagues_in_country=search_all_leagues.php
 api.path.leagues_in_country.jsonParentKey=countrys
 api.path.league_details_by_id=lookupleague.php
 api.path.league_details_by_id.jsonParentKey=leagues
-api.parameters.league_details_by_id=id
 api.path.seasons_in_league=search_all_seasons.php
 api.path.teams_in_league=search_all_teams.php
 api.path.teams_in_league.jsonParentKey=teams
 api.path.teams_details_in_league_by_id=lookup_all_teams.php
 api.path.teams_details_in_league_by_id.jsonParentKey=table
+api.path.players_in_team_by_team=searchplayers.php
+api.path.players_in_team_by_team.jsonParentKey=player
 api.path.table.byLeagueIdAndSeason=lookuptable.php
 api.path.table.byLeagueIdAndSeason.jsonParentKey=table
 api.path.players_by_team_id=lookup_all_players.php
@@ -34,6 +35,8 @@ api.parameters.league.idLeague=l
 api.parameters.country=c
 api.parameters.sport=s
 api.parameters.season=s
+api.parameters.league_details_by_id=id
+api.parameters.players_in_team_by_team=t
 whitelist.sport={ 'Soccer' }
 whitelist.seasons={ '2021-2022' }
 blacklist.leagues={ '_No League' }
