ADDED leagues whitelist

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,11 @@ api.parameters.league_details_by_id=id
 api.parameters.players_in_team_by_team=t
 whitelist.sport={ 'Soccer' }
 whitelist.seasons={ '2021-2022' }
+whitelist.leagues={ 'UEFA Champions League', 'Confederations Cup', 'FIFA Club World Cup', 'UEFA Super Cup','UEFA Cup',\
+  'UEFA Europa Conference League', 'UEFA Europa League', 'UEFA European Championships','UEFA Nations League'\
+  'DFB-Pokal','Dutch Eredivisie','EFL Cup','EFL Trophy','English Premier League','European Cup','FIFA Club World Cup',\
+  'FIFA World Cup','French Ligue 1','German Bundesliga','German 2. Bundesliga','German Super Cup','Italian Serie A',\
+  'Romanian Liga I','Spanish La Liga'}
 blacklist.leagues={ '_No League' }
 
 
