--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 springdoc.packagesToScan=com.football.football_stats
 springdoc.pathsToMatch=/update/**, /api/**
-api.key=50130162
+api.key=1
 api.version=v1
 api.format=json
 api.url_protocol=https
